Fixes transaction history padding + hide horizontal scroll

--- a/app/containers/TransactionHistory/Transactions.scss
+++ b/app/containers/TransactionHistory/Transactions.scss
@@ -27,6 +27,7 @@
     }
 
     .amounts {
+        margin-right: 10px;
         flex: 1 1 auto;
         white-space: nowrap;
     }
